--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
-    "@mantine/core": "7.6.1",
-    "@mantine/hooks": "7.6.1",
+    "@mantine/core": "^7.6.1",
+    "@mantine/hooks": "^7.6.1",
     "@next/bundle-analyzer": "^14.0.1",
     "@tabler/icons-react": "^2.40.0",
     "next": "14.0.1",
@@ -59,8 +59,8 @@
     "eslint-plugin-testing-library": "^6.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.4.31",
-    "postcss-preset-mantine": "1.13.0",
+    "postcss": "^8.4.35",
+    "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.0.3",
     "storybook": "^7.5.2",
